--- a/app/views/layouts/zuip.html.erb
+++ b/app/views/layouts/zuip.html.erb
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>ZUI Presentation: <%= yield(:title) %></title>
   <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag '../theme/default/style.css' %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'OpenLayers.js' %>
   <%= csrf_meta_tag %>
