--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -3,3 +3,35 @@ html, body, #map {
   width: 100%;
   height: 100%;
 }
+
+#outline_panel {
+  position : absolute;
+  top : 55px;
+  right : 0;
+}
+
+#outline_panel > a {
+  cursor : default;
+}
+
+.outlineDiv {
+  display : none;
+  opacity : 0.75;
+  background-color : darkblue;
+  color : white;
+  list-style : none;
+  text-align : left;
+  font-family: sans-serif;
+  font-size: smaller;
+/*   font-weight: bold; */
+  padding : 10px 10px 10px 10px;
+  margin-right : 18px;
+  margin-top : 0px;
+}
+
+a.minimizeDiv {
+  display : none;
+  float : right;
+  opacity : 0.75;
+  background-color : darkblue;
+}
