--- a/app/views/zuip/presentations/_outline.html.erb
+++ b/app/views/zuip/presentations/_outline.html.erb
@@ -1,4 +1,4 @@
-x<div id="outline_panel" class="olControlOutlinePanel olControlNoSelect" unselectable="on">
+<div id="outline_panel" class="olControlOutlinePanel olControlNoSelect" unselectable="on">
   <%= link_to_function image_tag('layer-switcher-maximize.png', :alt => t(:show_outline), :title => t(:show_outline)), "$('#outline').show(); $(this).next().show(); $(this).hide()", :class => 'maximizeDiv', :id => :show_outline %>
   <%= link_to_function image_tag('layer-switcher-minimize.png', :alt => t(:hide_outline), :title => t(:hide_outline)), "$('#outline').hide(); $(this).prev().show(); $(this).hide()", :class => 'minimizeDiv', :id => :hide_outline %>
   <ol id="outline" class="outlineDiv">
