add support for flash[:alert] messages
communicate errors to the user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<% if flash[:alert] %>
+  <div id="alert" class="flash"><%= flash[:alert] %></div>
+<% end %>
 <%= yield %>
 
 </body>
