move part of OpenLayers setup into the layout file
helper methods can’t be called within application.js, so this part of
the setup had to be moved into the layout file. Now root_path is taken
into account for OpenLayers images

--- a/app/views/layouts/zuip.html.erb
+++ b/app/views/layouts/zuip.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'OpenLayers.js' %>
   <%= csrf_meta_tag %>
+  <%= javascript_tag "OpenLayers.ImgPath = '#{root_path}images/'" %>
 </head>
 <body onload="init_map();">
 
