implement viewBox parsing from SVG file
makes all viewBox related specs pass

--- a/app/views/zuip/presentations/show.html.erb
+++ b/app/views/zuip/presentations/show.html.erb
@@ -3,10 +3,9 @@
 </div>
 <script language="javascript">
   function loadBaseLayer() {
-    zuip = new OpenLayers.Layer.ScalableInlineXhtml( '<%= @presentation.title %>', '<%= zuip_path(name) %>', new OpenLayers.Bounds(0,0,32768,24576), new OpenLayers.Size(8,6),{isBaseLayer: true, numZoomLevels: 14} );
+    zuip = new OpenLayers.Layer.ScalableInlineXhtml( '<%= @presentation.title %>', '<%= zuip_path(name) %>', <%= olBoundsForViewBox(@presentation.viewBox) %>, new OpenLayers.Size(80,60),{isBaseLayer: true, numZoomLevels: 14} );
     map.addLayers([zuip]);
   }
 </script>
 
 <%= render :partial => "outline", :locals => { :outline => @presentation.outline } %>
-
