--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -8,6 +8,7 @@ html, body, #map {
   position : absolute;
   top : 55px;
   right : 0;
+  z-index : 1000;
 }
 
 #outline_panel > a {
@@ -28,6 +29,10 @@ html, body, #map {
   margin-right : 18px;
   margin-top : 0px;
   margin-bottom : 0px;
+}
+
+.outlineDiv a {
+  color : #ffffff;
 }
 
 a.maximizeDiv {
