--- a/app/views/zuip/presentations/_outline.html.erb
+++ b/app/views/zuip/presentations/_outline.html.erb
@@ -10,7 +10,7 @@
   <ol id="outline" class="outlineDiv">
     <li><%=t :outline %></li>
     <% for item in outline do %>
-      <li><%= link_to_function item, olPanTo(item) %></li>
+      <li><%= link_to_function item[:name], olPanTo(item) %></li>
     <% end %>
   </ol>
   <div style="background-color: transparent;">
