add possibility to provide content for header
the application layout can receive code that will be inserted into the
header from partials rendered within this layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title><%= yield :title || "ZUI Presentations" %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= yield :header %>
   <%= csrf_meta_tag %>
 </head>
 <body>
