ajaxify update presentation form
this finishes the add assets scenario implementation. now it’s time to
refactor this stuff.

--- a/app/views/zuip/presentations/edit.html.erb
+++ b/app/views/zuip/presentations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= javascript_include_tag 'edit' %>
 <% end %>
 
-<%= form_for :presentation, :url => { :action => 'update', :name => @presentation.fileName }, :html => { :method => 'put' } do |f| %>
+<%= form_for :presentation, :url => { :action => 'update', :name => @presentation.fileName }, :html => { :method => 'put' }, :remote => true do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :fileName %>
